# rust-chess

./: .gitignore  .pnp.cjs  dev.sh  package.json
src/: App.tsx  Board.css  Board.tsx  Game.css  Game.tsx  SidePanel.css  SidePanel.tsx  styles.css
src-tauri/: Cargo.toml  README.md
src-tauri/benches/: perft.rs
src-tauri/chess_rs/: Cargo.toml
src-tauri/chess_rs/benches/: perft.rs
src-tauri/chess_rs/src/: bitboard.rs  board.rs  core.rs  lookup_tables.rs  magics.rs  perft.rs
src-tauri/src/: bitboard.rs  board.rs  core.rs  lib.rs  lookup_tables.rs  magics.rs  main.rs  perft.rs
